# rift-messenger

./: .gitignore  HANDOFF.md  README.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
.github/workflows/: release.yml
docs/: BUZZ_AUDIT.md
docs/discord-clone-spec/: 00-index.md  01-client-architecture.md  02-server-architecture.md  45-theming.md
electron/: main.cjs  preload.cjs
src/: App.tsx  AttachmentView.tsx  Onboarding.tsx  QrScanner.tsx  desktopCapture.ts  files.ts  pairing.ts  relayPairing.ts  storage.ts  styles.css  useMandatoryUpdater.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/audio/: micPipeline.ts  rnnoise-processor.ts  rnnoise-worklet.ts  rnnoise.ts  speaking.ts
src/types/: rift-desktop.d.ts  rnnoise-wasm.d.ts
test-fixtures/: p2p-test.txt
tests/: voice-call.spec.ts
