[package]
name = "rift-messenger"
version = "0.5.0"
description = "RIFT peer-to-peer messenger"
authors = ["RIFT contributors"]
edition = "2021"
license = "MIT"

[lib]
name = "rift_messenger_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
serde_json = "1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
